# scientific-computing-with-python

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
Chapter00/t0a/: t0a_setting_up_python.ipynb
Chapter00/t0c/: t0c_python_syntax_and_plotting.ipynb
Chapter01/: smartfunctions.py
Chapter15/: bisection.py
Chapter19/: chapter19.ipynb
book/Chapter00/t0a/: t0a_setting_up_python.ipynb
book/Chapter00/t0b/: t0b_jupyter_notebooks.ipynb
book/Chapter01/: smartfunctions.py
book/Chapter02/: chapter02.html
book/Chapter03/: chapter03.ipynb
book/Chapter08/: chapter08.ipynb
book/Chapter15/: find_in_file.py
others/: FDM.ipynb  fitting.ipynb  mc_integration.ipynb  ode.ipynb  runge_phenomenon.ipynb
projects/: fdm.ipynb  fitting.ipynb  mc_integration.ipynb  ode.ipynb
